--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ requires-python = ">=3.10"
 dependencies = [
     'Django>=5.2.1',
     'django-ninja>=1.4.1',
-    'pillow>=11.2.1'
+    'pillow>=11.2.1',
+    'mutagen>=1.47.0'
 ]
 
 classifiers = [
